# zenon-sdk-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  zenon_sdk_config.h.in
.github/workflows/: cmake.yml  codeql-analysis.yml
include/: api_embedded.hpp  api_ledger.hpp  connection_http.hpp  connection_ws.hpp  connector.hpp  internal.hpp  sdk.hpp
src/: api_embedded.cpp  api_ledger.cpp  connection_error.hpp  connection_http.hpp  connection_wss.hpp  internal.hpp  sdk.cpp  sdk.hpp
src/api/: ledger.cpp  ledger.hpp
src/api/embedded/: pillar.cpp  pillar.hpp
test/: config.hpp  connection.cpp  embedded.cpp  helper.hpp  main.cpp  pillar.cpp
